# clawops-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: agent.md  voiceml-stream-protocol.md
docs/agent/: README.md  architecture.md  custom-providers.md  events.md  mcp.md  pipeline.md  providers.md  quickstart.md  recording.md  tools.md  tracing.md  troubleshooting.md
docs/plans/: 2026-03-06-clawops-agent-design.md  2026-03-06-clawops-agent-implementation.md  2026-03-06-clawops-python-sdk-design.md  2026-03-06-clawops-python-sdk-implementation.md  2026-03-09-agent-outbound-call-design.md  2026-03-09-agent-outbound-call-implementation.md
docs/superpowers/plans/: 2026-03-11-gemini-realtime-protocol-fix.md  2026-03-11-gemini-realtime-sdk-refactor.md  2026-03-12-openai-realtime-sdk-migration.md  2026-05-24-realtime-session-prewarm.md
docs/superpowers/specs/: 2026-03-11-gemini-realtime-protocol-fix-design.md  2026-03-11-gemini-realtime-sdk-refactor-design.md  2026-03-12-openai-realtime-sdk-migration-design.md  2026-05-24-realtime-session-prewarm-design.md
scripts/: measure_prewarm_cost.py
src/clawops/: __init__.py  _base_client.py  _client.py  _constants.py  _exceptions.py  _models.py  _resource.py  _utils.py  pagination.py  webhooks.py
src/clawops/agent/: __init__.py  _agent.py  _audio.py  _builtin_tools.py  _control_ws.py  _hold_audio.py  _media_ws.py  _recorder.py  _session.py  _telemetry.py  _tool.py
src/clawops/agent/mcp/: __init__.py  _client.py  _http.py  _stdio.py
src/clawops/agent/pipeline/: __init__.py  _anthropic_llm.py  _base.py  _buffering_call.py  _builtin_tool_schemas.py  _deepgram_stt.py  _deepseek_llm.py  _elevenlabs_tts.py  _fireworks_llm.py  _gemini_llm.py  _gemini_realtime.py  _groq_llm.py  _mistral_llm.py  _ollama_llm.py  _openai_realtime.py  _perplexity_llm.py  _pipeline_session.py  _realtime_session.py  _together_llm.py  _xai_llm.py
src/clawops/agent/pipeline/llm/: __init__.py  _anthropic.py  _deepseek.py  _fireworks.py  _gemini.py  _groq.py  _mistral.py  _ollama.py  _openai.py  _openai_compat.py  _perplexity.py  _together.py  _xai.py
src/clawops/agent/pipeline/realtime/: __init__.py  _gemini.py  _openai.py
src/clawops/agent/pipeline/stt/: __init__.py  _deepgram.py
src/clawops/agent/pipeline/tts/: __init__.py  _elevenlabs.py
src/clawops/agent/plugins/: __init__.py  openai_realtime.py
src/clawops/agent/tracing/: __init__.py  _attributes.py  _config.py  _spans.py
src/clawops/resources/: __init__.py  accounts.py  assignment_links.py  calls.py  messages.py  numbers.py  recordings.py  sip_credentials.py  sip_endpoints.py  webhook_logs.py
src/clawops/resources/sip/: __init__.py  credentials.py
src/clawops/types/: __init__.py  assignment_link.py  call.py  call_params.py  message.py  message_params.py  number.py  number_params.py  recording.py  shared.py  sip.py  summary.py  transcript.py  webhook_log.py
src/clawops/types/sip/: __init__.py  credential.py  credential_params.py
tests/: conftest.py  test_agent_exceptions.py  test_assignment_links.py  test_base_client.py  test_calls.py  test_client.py  test_exceptions.py  test_integration.py  test_messages.py  test_models.py  test_numbers.py  test_pagination.py  test_params.py  test_recordings.py  test_sip_credentials.py  test_types.py  test_utils.py  test_webhooks.py
tests/agent/: test_agent.py  test_anthropic_llm.py  test_audio.py  test_buffering_call.py  test_control_ws.py  test_deepgram_stt.py  test_dtmf.py  test_elevenlabs_tts.py  test_gemini_llm.py  test_gemini_prewarm.py  test_gemini_realtime.py  test_integration.py  test_mcp.py  test_mcp_client.py  test_media_ws.py  test_ollama_llm.py  test_openai_compat_llms.py  test_openai_llm.py  test_openai_prewarm.py  test_pipeline_base.py  test_pipeline_prewarm.py  test_pipeline_session.py  test_prewarm_cancel.py  test_prewarm_integration.py  test_realtime_session.py  test_recorder.py  test_session.py  test_session_protocol.py  test_tool.py  test_tracing.py  test_transfer.py
