[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawops"
dynamic = ["version"]
description = "The official Python library for the ClawOps Voice API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "ClawOps", email = "support@claw-ops.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.23.0,<1",
    "pydantic>=2.0.0,<3",
    "typing-extensions>=4.7.0",
]

[project.urls]
Homepage = "https://github.com/learners-superpumped/clawops-python"
Documentation = "https://docs.claw-ops.com"
Repository = "https://github.com/learners-superpumped/clawops-python"

[tool.hatch.version]
path = "src/clawops/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clawops"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py39"
line-length = 120
