[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawops"
dynamic = ["version"]
description = "The official Python library for the ClawOps Voice API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "ClawOps", email = "support@claw-ops.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.23.0,<1",
    "pydantic>=2.0.0,<3",
    "typing-extensions>=4.7.0",
]

[project.urls]
Homepage = "https://github.com/learners-superpumped/clawops-python"
Documentation = "https://docs.claw-ops.com"
Repository = "https://github.com/learners-superpumped/clawops-python"

[tool.hatch.version]
path = "src/clawops/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clawops"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.0",
    "ruff>=0.1",
    "aiohttp>=3.9.0,<4",
    "google-genai>=1.60.0",
]

# Agent
agent = ["aiohttp>=3.9.0,<4"]
openai-realtime = ["clawops[agent]"]
openai-llm = ["clawops[agent]", "openai>=1.0.0"]
anthropic-llm = ["clawops[agent]", "anthropic>=0.40.0"]
gemini-llm = ["clawops[agent]", "google-genai>=1.60.0"]
ollama = ["clawops[agent]", "openai>=1.0.0"]
mistral = ["clawops[agent]", "openai>=1.0.0"]
groq = ["clawops[agent]", "openai>=1.0.0"]
perplexity = ["clawops[agent]", "openai>=1.0.0"]
together = ["clawops[agent]", "openai>=1.0.0"]
fireworks = ["clawops[agent]", "openai>=1.0.0"]
deepseek = ["clawops[agent]", "openai>=1.0.0"]
xai = ["clawops[agent]", "openai>=1.0.0"]
deepgram = ["clawops[agent]", "deepgram-sdk>=3.0.0"]
elevenlabs = ["clawops[agent]", "elevenlabs>=1.0.0"]
google-tts = ["clawops[agent]", "google-cloud-texttospeech>=2.0.0"]
mcp = ["clawops[agent]", "mcp>=1.0.0"]
tracing = ["opentelemetry-api>=1.20.0"]
agent-all = [
    "clawops[openai-realtime]",
    "clawops[openai-llm]",
    "clawops[anthropic-llm]",
    "clawops[gemini-llm]",
    "clawops[deepgram]",
    "clawops[elevenlabs]",
    "clawops[mcp]",
    "clawops[tracing]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py39"
line-length = 120
